2009-02-03  Ross Burton  <ross@linux.intel.com>

	* configure.in:
	* NEWS:
	Version 2.25.2.

2009-01-28  Christian Persch  <chpe@gnome.org>

	* src/sj-main.c: (main): Remove redundant gtk_init() call. Bug
	#569020.

2009-01-28  Ross Burton  <ross@linux.intel.com>

	* src/sj-prefs.c:
	Fix compile failure (Frederic Peters)

2009-01-28  Luis Medinas  <lmedinas@gnome.org>

	* configure.in:
	* data/sound-juicer.glade:
	* libjuicer/sj-metadata.c (sj_metadata_helper_check_media):
	* src/sj-extracting.c (cleanup), (finished_actions),
	(on_extract_activate):
	* src/sj-main.c (on_eject_activate), (is_audio_cd),
	(media_added_cb), (media_removed_cb), (set_drive_from_device),
	(set_device), (cd_drive_exists), (prefs_get_default_device),
	(is_cd_duplication_available), (on_duplicate_activate), (main):
	* src/sj-play.c (setup):
	* src/sj-prefs.c (device_changed_cb), (prefs_drive_changed),
	(on_edit_preferences_cb):
	* src/sound-juicer.h:

	Use libbrasero-media instead of nautilus-cd-burner for burning,
	Brasero will replace n-c-b for GNOME 2.26.
	Patch from Philippe Rouquier <bonfire-app@wanadoo.fr>
	Closes bgo #567286.

2009-01-23  Ross Burton  <ross@linux.intel.com>

	* configure.in:
	Check for socket(), fixing Solaris builds (#532094, thanks Brian
	Cameron).

2009-01-05  Bastien Nocera  <hadess@hadess.net>

	* src/sj-main.c (musicbrainz_submit_message_area_new):
	Fix conflicting mnemonics (Closes: #566597)

2008-12-22  Ross Burton  <ross@linux.intel.com>

	* configure.in:
	* src/sj-main.c:
	* src/sj-extracting.c:
	* src/sj-prefs.c:
	Drop libgnome and instead use the new GTK+ hotness.  Thanks Iain
	Holmes and Emilio Pozuelo Monfort (#556793)

2008-12-22  Jonathan Matthew  <jonathan@d14n.org>

	* libjuicer/sj-metadata-musicbrainz3.c: (mb_list_albums):
	Handle mb_query_get_releases returning NULL, which indicates an error.
	It doesn't tell us anything about the error, sadly.  (Closes: #565056)

2008-12-18  Bastien Nocera  <hadess@hadess.net>
