@@ -80,6 +80,8 @@
         %tA -- track artist (lowercase)
         %ts -- track artist (sortable)
         %tS -- track artist (sortable lowercase)
+        %dn -- disc and track number (i.e Disk 2 - 6, or 6)
+        %dN -- disc number, zero padded (i.e d02t06, or 06)
         </long>
       </locale>
     </schema>
