@@ -1,3 +1,9 @@
+2009-02-07  Ross Burton  <ross@linux.intel.com>
+
+	* src/sj-extracting.c:
+	* data/sound-juicer.schemas.in:
+	Update the file pattern documentation.
+
 2009-02-03  Ross Burton  <ross@linux.intel.com>
 
 	* configure.in:
